--- a/src/components/TodoInput/TodoInput.css
+++ b/src/components/TodoInput/TodoInput.css
@@ -1,19 +1,18 @@
 form {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-around;
     padding: 1rem;
     margin-top: 2rem;
-    background-color: rgb(211, 201, 201);
-    width: 80%;
+    width: 70%;
     margin-right: auto;
     margin-left: auto;
+    border-radius: 1rem;
 }
 
 input {
-    color: white;
-    background-color: rgb(211, 201, 201);
-    font-size: 1.5rem;
+    color: black;
+    font-size: 1.2rem;
     border-style: none;
     outline: none;
     border-bottom: 2px solid black;
@@ -29,14 +28,14 @@ input {
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: white;
+    color: black;
     opacity: 1; /* Firefox */
   }
   
   :-ms-input-placeholder { /* Internet Explorer 10-11 */
-    color: white;
+    color: black;
   }
   
   ::-ms-input-placeholder { /* Microsoft Edge */
-    color: white;
+    color: black;
   }
