--- a/src/components/TodoInput/TodoInput.css
+++ b/src/components/TodoInput/TodoInput.css
@@ -40,3 +40,7 @@ input {
   ::-ms-input-placeholder { /* Microsoft Edge */
     color: black;
   }
+  button {
+    background: none;
+    border: none;
+  }
