--- a/src/components/TodoCard/TodoCard.css
+++ b/src/components/TodoCard/TodoCard.css
@@ -3,7 +3,9 @@
   border: 2px black solid;
   justify-content: space-between;
   align-items: center;
-  width: 40%;
+  width: 60%;
   margin: 2rem auto;
   padding: 1rem;
+  background-color: rgba(255, 228, 196, 0.133);
+  transition: all 1s;
 }
