--- a/src/components/TodoCard/TodoEdit/TodoEdit.css
+++ b/src/components/TodoCard/TodoEdit/TodoEdit.css
@@ -7,5 +7,7 @@
   text-align: center;
   font-size: 1rem;
   padding: 1rem;
+  border: black solid 2px;
+  background-color: rgba(255, 228, 196, 0.071);
   border: none;
 }
